<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:padding="5dp">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/farmer_seeoffer"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"
        android:layout_alignStart="@+id/textView23"
        android:layout_marginBottom="-42dp"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/farmer_seeoffer"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/textView23"
        android:layout_toEndOf="@+id/textView23"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/bidder_seeoffer"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="52dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"
        android:layout_alignStart="@+id/textView24"
        android:layout_marginBottom="-42dp"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/bidder_seeoffer"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/textView23"
        android:layout_toEndOf="@+id/textView24"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/vegetable_seeoffer"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"
        android:layout_marginBottom="-42dp"
        android:layout_toEndOf="@+id/textView24"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/vegetable_seeoffer"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="64dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/textView23"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/textView25"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/quantity_seeoffer"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="64dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"
        android:layout_marginBottom="-42dp"
        android:layout_toEndOf="@+id/textView25"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/quantity_seeoffer"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="48dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/textView23"
        android:layout_toEndOf="@+id/textView26"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/grade_seeoffer"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"
        android:layout_marginBottom="-42dp"
        android:layout_toEndOf="@+id/textView26"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/grade_seeoffer"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="36dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/textView23"
        android:layout_toEndOf="@+id/textView27"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/cost_seeoffer"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="139dp"
        tools:padding="4dp" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="36dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"
        android:layout_marginBottom="-42dp"
        android:layout_toEndOf="@+id/textView27"
        android:background="@drawable/border_thiick"
        android:padding="5dip"
        android:text="@string/cost_seeoffer"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="139dp"
        tools:padding="4dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="49dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/textView23"
        android:layout_toEndOf="@+id/textView28"

        android:background="@drawable/border_thiick"
        android:text="@string/city_seeoffer"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_above="@+id/textView23"

        android:layout_marginBottom="-42dp"
        android:layout_toEndOf="@+id/textView28"
        android:background="@drawable/border_thiick"
        android:text="@string/city_seeoffer"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="105dp" />

</RelativeLayout>