<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceEntryBidder">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText9"
        android:text="Selected City"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Enter price per kg"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_home2"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit_3rd_bd"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_home2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#0095B6"
        android:text="@string/home"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_alignParentStart="true"
        android:background="@android:color/black"
        android:text="Get Location"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView20"
        android:ems="10"
        android:hint="@string/enter_price_3rd_db"
        android:inputType="textPersonName"
        android:textStyle="italic"
        android:digits="1234567890"/>

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView21"
        android:textSize="24sp"
        android:textStyle="italic" />
</RelativeLayout>